# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-11-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add recv_asyncs to the cloudi_service module and the cloudi module
      for internal services, but not to external services due to the
      memory allocation burden it would create for external services

2013-11-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix a small difference between the cloudi module and
      the cloudi_service module with how PatternPid can be undefined
    * Add the functions destination_refresh_immediate/1 and
      destination_refresh_lazy/1 to the modules cloudi and cloudi_service
      so interfaces can check before sending, if necessary

2013-11-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add lager and goldrush as dependencies of erlang_cassandra

2013-11-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update trie

2013-11-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add a synchronous mode to the cloudi_logger to prevent
      excessive memory consumption and system death

2013-11-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix service request and info message queuing when
      cloudi_service_init/3 is executed and duo_mode is true
    * Add the request_timeout_immediate_max service configuration option
      to provide destination monitoring for long timeout values

2013-11-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update cowboy to 0.9.0
    * Fix some type errors
    * Fix cloudi_runtime_testing random usage
    * Fix the CloudI release so no included CloudI services
      have their Erlang application dependencies started automatically

2013-11-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi_service_handle_info/3 exception stacktrace logging
    * Fix cloudi_service_map_reduce resend on first few messages

2013-11-08 Michael Truog   <mjtruog [at] gmail (dot) com>
